<resources>
    <string name="app_name">BakeIt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">295848057509630</string>
    <string name="google_geo_key">AIzaSyA5_1_1vrZ0qLdE2XoYHJAoatbrtKIv4Eo</string>
    <string name="fb_login_protocol_scheme">fb295848057509630</string>
    <string name="category">category</string>
    <string name="categoryicon">categoryIcon</string>
    <string name="recipeImage">recipeImage</string>
    <string name="likeimage">likeImage</string>
    <string name="strowarrow">strowArrow</string>
    <string name="strowauthor">strowAuthor</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="city">City</string>
    <string name="forget_password">Forget password?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
</resources>
